# gridmq

./: .gitignore  .travis.yml  AUTHORS  CMakeLists.txt  Makefile.am  README  abi_version.sh  bootstrap  configure.ac
contrib/debian/: changelog  control  copyright
doc/: README  diag.py  grid_allocmsg.txt  grid_bus.txt  grid_close.txt  grid_cmsg.txt  grid_device.txt  grid_errno.txt  grid_freemsg.txt  grid_getsockopt.txt  grid_inproc.txt  grid_poll.txt  grid_recvmsg.txt  grid_send.txt  grid_setsockopt.txt  grid_socket.txt  grid_symbol.txt  grid_symbol_info.txt  grid_tcpmux.txt  grid_term.txt  grid_ws.txt  gridmq.txt
man/: grid_bind.txt  grid_connect.txt  grid_env.txt  grid_getsockopt.txt  grid_ipc.txt  grid_pair.txt  grid_pipeline.txt  grid_pubsub.txt  grid_reallocmsg.txt  grid_recv.txt  grid_reqrep.txt  grid_sendmsg.txt  grid_shutdown.txt  grid_strerror.txt  grid_survey.txt  grid_tcp.txt  gridcat.txt  gridmq.txt  tcpmuxd.txt
src/: CMakeLists.txt  bus.h  grid.h  gridmq.pc.in  inproc.h  ipc.h  pair.h  pipeline.h  pkgconfig.in  protocol.h  pubsub.h  reqrep.h  survey.h  tcp.h  tcpmux.h  transport.h  ws.h
src/aio/: ctx.c  ctx.h  fsm.c  fsm.h  poller.c  poller.h  poller_epoll.h  poller_epoll.inc  poller_kqueue.h  poller_kqueue.inc  poller_poll.h  poller_poll.inc  pool.c  pool.h  timer.c  timer.h  timerset.c  timerset.h  usock.c  usock.h  usock_posix.h  usock_posix.inc  usock_win.h  usock_win.inc  worker.c  worker.h  worker_posix.h  worker_posix.inc  worker_win.h  worker_win.inc
src/core/: ep.c  ep.h  epbase.c  global.c  global.h  pipe.c  poll.c  sock.c  sock.h  sockbase.c  symbol.c
src/devices/: device.c  device.h  tcpmuxd.c
src/protocols/bus/: bus.c  bus.h  xbus.c  xbus.h
src/protocols/pair/: pair.c  pair.h  xpair.c  xpair.h
src/protocols/pipeline/: pull.c  pull.h  push.c  push.h  xpull.c  xpull.h  xpush.c  xpush.h
src/protocols/pubsub/: pub.c  pub.h  sub.c  sub.h  trie.c  trie.h  xpub.c  xpub.h  xsub.c  xsub.h
src/protocols/reqrep/: rep.c  rep.h  req.c  req.h  task.c  task.h  xrep.c  xrep.h  xreq.c  xreq.h
src/protocols/survey/: respondent.c  respondent.h  surveyor.c  surveyor.h  xrespondent.c  xrespondent.h  xsurveyor.c  xsurveyor.h
src/protocols/utils/: dist.c  dist.h  excl.c  excl.h  fq.c  fq.h  lb.c  lb.h  priolist.c  priolist.h
src/transports/inproc/: binproc.c  binproc.h  cinproc.c  cinproc.h  inproc.c  inproc.h  ins.c  ins.h  msgqueue.c  msgqueue.h  sinproc.c  sinproc.h
src/transports/ipc/: aipc.c  aipc.h  bipc.c  bipc.h  cipc.c  cipc.h  ipc.c  ipc.h  sipc.c  sipc.h
src/transports/tcp/: atcp.c  atcp.h  btcp.c  btcp.h  ctcp.c  ctcp.h  stcp.c  stcp.h  tcp.c  tcp.h
src/transports/tcpmux/: atcpmux.c  atcpmux.h  btcpmux.c  btcpmux.h  ctcpmux.c  ctcpmux.h  stcpmux.c  stcpmux.h  tcpmux.c  tcpmux.h
src/transports/utils/: backoff.c  backoff.h  base64.c  base64.h  dns.c  dns.h  dns_getaddrinfo.h  dns_getaddrinfo.inc  dns_getaddrinfo_a.h  dns_getaddrinfo_a.inc  iface.c  iface.h  literal.c  literal.h  port.c  port.h  streamhdr.c  streamhdr.h  tcpmux.c
src/transports/ws/: aws.c  aws.h  bws.c  bws.h  cws.c  cws.h  sha1.c  sha1.h  sws.c  sws.h  ws.c  ws.h  ws_handshake.c  ws_handshake.h
src/utils/: alloc.c  alloc.h  atomic.c  atomic.h  attr.h  chunk.c  chunk.h  chunkref.c  chunkref.h  clock.c  clock.h  closefd.c  closefd.h  cont.h  efd.c  efd.h  efd_eventfd.h  efd_eventfd.inc  efd_pipe.h  efd_pipe.inc  efd_socketpair.h  efd_socketpair.inc  efd_win.h  efd_win.inc  err.c  err.h  fast.h  fd.h  glock.c  glock.h  hash.c  hash.h  int.h  list.c  list.h  msg.c  msg.h  mutex.c  mutex.h  queue.c  (+18 more)
t/: README  async_shutdown.c  block.c  bug328.c  device.c  emfile.c  hash.c  iovec.c  ipc.c  ipc_shutdown.c  ipc_stress.c  msg.c  pipeline.c  reqrep.c  separation.c  shutdown.c  symbol.c  timeo.c
tests/: bus.c  cmsg.c  device4.c  device5.c  device6.c  device7.c  domain.c  inproc.c  inproc_shutdown.c  list.c  pair.c  poll.c  prio.c  pubsub.c  separation.c  survey.c  tcp.c  tcp_shutdown.c  tcpmux.c  term.c  testutil.h  trie.c  win_sec_attr.c  ws.c  zerocopy.c
tools/: gridcat.c  options.c  options.h  tcpmuxd.c
